localized js libraries

--- a/index.html
+++ b/index.html
@@ -23,9 +23,12 @@
         
         <title>1st PhoneGap app</title>
         <link rel="stylesheet" href="styles.css">
+        <!--
         <script src="https://dl.dropboxusercontent.com/u/21142484/modules/noprefix.js"></script>      
         <script src="https://dl.dropboxusercontent.com/u/21142484/modules/lib.js"></script>
-                
+        -->
+        <script src="js/noprefix.js"></script>      
+        <script src="js/lib.js"></script>        
     </head>
     <body>
         <div id="frontPanel">
